<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_gap"
        android:background="@color/white"
        android:gravity="center_vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon2left"
                android:src="@drawable/location_two"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icon2text"
            android:background="@color/transparent"
            android:textColor="@color/tag_name_color"
            android:text="@string/back_to_father"/>
    <Button android:id="@+id/to_father_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/to_father"
        android:gravity="left|center_vertical"
        
        android:textSize="@dimen/location_name_size"
        android:textColor="@color/tag_name_color"
        android:text="loading"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_gap"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_info_height1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon2left"
                android:src="@drawable/location_one"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon2text"
                android:textSize="@dimen/location_name_size"
                android:textColor="@color/tag_name_color"
                android:text="@string/current_tag"/>
            <TextView 
                android:id="@+id/current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/location_name_size"
                android:textColor="@color/tag_name_color"
                android:text="loading"/>
            <ImageButton 
                android:id="@+id/relocate_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/relocate_right"
                android:src="@drawable/relocate"
                android:background="@color/transparent" />
            </LinearLayout>
            <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_info_height2"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/icon2left"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/mark_bt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0.00"
                    android:textColor="@color/tag_info_color"
                    android:textSize="@dimen/mark_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mark_text"
                    android:textColor="@color/tag_info_color"
                    android:text="@string/mark" 
                    android:background="@color/transparent"/>
                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/mark2left"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/son_tag_bt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:textColor="@color/tag_info_color"
                    android:textSize="@dimen/mark_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mark_text"
                    android:textColor="@color/tag_info_color"
                    android:text="@string/son_tag" 
                    android:background="@color/transparent"/>
                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/mark2left"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/contributer_bt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:textColor="@color/tag_info_color"
                    android:textSize="@dimen/mark_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mark_text"
                    android:textColor="@color/tag_info_color"
                    android:text="@string/contributer" 
                    
                    android:background="@color/transparent"/>
                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/mark2left"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/liker_bt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:textColor="@color/tag_info_color"
                    android:textSize="@dimen/mark_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mark_text"
                    android:textColor="@color/tag_info_color"
                    android:text="@string/liker" 
                    android:background="@color/transparent"/>
                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/by2left"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/by"
                    android:textSize="@dimen/mark_text"
                    android:textColor="@color/tag_info_color"/>
                <TextView
                    android:id="@+id/creater_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mark_text"
                    android:textColor="@color/tag_info_color"
                    android:text="loading" 
                    android:background="@color/transparent"/>
                </LinearLayout>
                
            </LinearLayout>
            <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_info_height3"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/share_bt" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="31dp"
                android:src="@drawable/share_bt_unpressed"
                android:background="@color/transparent"/>
            <ImageButton 
                android:id="@+id/follow_bt" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="31dp"
                android:src="@drawable/follow_bt_unpressed"
                android:background="@color/transparent"/>
            <ImageButton 
                android:id="@+id/like_bt" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="31dp"
                android:src="@drawable/like_bt_unpressed"
                android:background="@color/transparent"/>
            <ImageButton 
                android:id="@+id/more_bt" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="31dp"
                android:src="@drawable/more_bt_unpressed"
                android:background="@color/transparent"/>
            </LinearLayout>
    </LinearLayout>
    <WebView
        android:id="@+id/tag_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_gap"
        android:scrollbars="none"
        />

</LinearLayout>
</ScrollView>
